Refactor SCSS for small screens

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,45 +1,52 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
 html {
-  text-align: center;
-  color: white;
+  font-size: 62.5%;
 }
 
-.header {
-  text-align: left;
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.6rem;
+  color: white;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .hero {
-  letter-spacing: 0.2px;
-
-  &__h1 {
+  &__heading {
     font-family: "Poppins", sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.6;
+    font-size: 2.4rem;
+    line-height: 3.6rem;
+    letter-spacing: -0.01em;
   }
 
-  &__desc {
-    font-family: "Open Sans", sans-serif;
+  &__description {
+    line-height: 2.4rem;
   }
+}
 
-  &__btn {
-    font-family: "Poppins", sans-serif;
-    font-size: 0.8rem;
-  }
+.btn {
+  color: $Violet;
+  font-size: 1.2rem;
 }
 
 @include screen-l {
   body {
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 
   .hero {
     text-align: left;
 
-    &__h1 {
+    &__header {
       font-size: 2.5rem;
     }
+  }
 
-    &__btn {
-      font-size: 1rem;
-    }
+  .btn {
+    font-size: 1rem;
   }
 }
