--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,4 +10,5 @@
 @import "blocks/header";
 @import "blocks/body";
 @import "blocks/hero";
-@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/btn";
