--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,67 @@
 /* utilities */
 /* base */
-* {
-  box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-  text-align: center;
-  color: white;
+  font-size: 62.5%;
 }
 
-.header {
-  text-align: left;
-}
-
-.hero {
-  letter-spacing: 0.2px;
-}
-.hero__h1 {
-  font-family: "Poppins", sans-serif;
-  font-size: 1.5rem;
-  line-height: 1.6;
-}
-.hero__desc {
+body {
   font-family: "Open Sans", sans-serif;
+  font-size: 1.6rem;
+  color: white;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
-.hero__btn {
+
+.hero__heading {
   font-family: "Poppins", sans-serif;
-  font-size: 0.8rem;
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  letter-spacing: -0.01em;
+}
+.hero__description {
+  line-height: 2.4rem;
+}
+
+.btn {
+  color: #674baf;
+  font-size: 1.2rem;
 }
 
 @media (min-width: 1300px) {
   body {
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 
   .hero {
     text-align: left;
   }
-  .hero__h1 {
+  .hero__header {
     font-size: 2.5rem;
   }
-  .hero__btn {
+
+  .btn {
     font-size: 1rem;
   }
 }
 /* blocks */
 .header {
-  padding: 2.5em;
+  margin-right: auto;
+  margin-top: 3.8rem;
 }
 .header__logo {
-  height: 1em;
+  height: 1.9rem;
 }
 
 @media (min-width: 1300px) {
@@ -79,38 +89,16 @@ body {
     min-height: 100vh;
   }
 }
-.hero__img {
-  margin: 1.5em 0;
-  width: 80%;
-  max-width: 700px;
+.hero__image {
+  margin: 6rem 0 6rem;
+  max-width: 70rem;
 }
 .hero__container {
   margin: auto;
-  max-width: 40em;
+  max-width: 40rem;
 }
-.hero__h1 {
-  margin: 1em;
-  margin-top: 1.5em;
-}
-.hero__desc {
-  margin: 0 2em;
-}
-.hero__btn {
-  width: 15em;
-  margin: 2em;
-  border: none;
-  background-color: white;
-  color: #674baf;
-  padding: 1em;
-  border-radius: 2em;
-  cursor: pointer;
-  max-width: 12.5em;
-  box-shadow: 8px 8px 10px 0px rgba(0, 0, 0, 0.2);
-}
-.hero__btn:hover {
-  color: white;
-  box-shadow: 0 0 0 2px white inset;
-  background-color: transparent;
+.hero__description {
+  margin: 1rem 0;
 }
 
 @media (min-width: 1300px) {
@@ -119,7 +107,7 @@ body {
     margin: auto;
     display: flex;
   }
-  .hero__img {
+  .hero__image {
     width: 100%;
     height: auto;
     margin: 0;
@@ -128,24 +116,26 @@ body {
     max-width: 50em;
     margin-left: 3em;
   }
-  .hero__h1 {
+  .hero__heading {
     margin: 1em 0;
     margin-top: 0;
   }
-  .hero__desc {
+  .hero__description {
     margin: 0;
   }
-  .hero__btn {
-    margin: 2em 0;
-  }
 }
-.footer__list {
-  margin: 2.5em 0;
+.social__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 6.4rem;
+  margin-bottom: 4rem;
 }
-.footer__list-item {
-  margin: 0.2em;
-  padding: 0.5em;
-  border: 1px white solid;
+.social__list-item {
+  list-style: none;
+  margin: 0 0.5rem;
+  padding: 0.3rem 0.6rem;
+  border: 0.1rem white solid;
   border-radius: 100%;
   cursor: pointer;
 }
@@ -155,31 +145,39 @@ body {
   width: 1em;
 }
 
-.footer-frontendmaster {
-  padding: 0.2em;
-}
-.footer-frontendmaster__attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.footer-frontendmaster__attribution a {
-  color: #3e52a3;
-}
-
 @media (min-width: 1300px) {
-  .footer__list {
+  .social__list {
     padding: 0 4.5em;
     display: flex;
     justify-content: flex-end;
     margin: 1.5em 0;
   }
-  .footer__list-item {
+  .social__list-item {
     margin: 0.4em;
   }
 
   .fab {
     width: 1.15em;
   }
+}
+.btn:link, .btn:visited {
+  text-decoration: none;
+  margin-top: 1.5rem;
+  border: none;
+  background-color: white;
+  padding: 1.2rem 7rem;
+  border-radius: 2rem;
+  box-shadow: 0.2rem 0.2rem 0.5rem 0px rgba(0, 0, 0, 0.4);
+  display: inline-block;
+  transition: all 0.2s ease-out;
+}
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0.5rem 0.5rem 1rem 0px rgba(0, 0, 0, 0.4);
+}
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0.2rem 0.2rem 0.5rem 0px rgba(0, 0, 0, 0.4);
 }
 
 /*# sourceMappingURL=style.css.map */
