--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,8 +1,9 @@
 .header {
-  padding: 2.5em;
+  margin-right: auto;
+  margin-top: 3.8rem;
 
   &__logo {
-    height: 1em;
+    height: 1.9rem;
   }
 }
 
