--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,41 +1,16 @@
 .hero {
-  &__img {
-    margin: 1.5em 0;
-    width: 80%;
-    max-width: 700px;
+  &__image {
+    margin: 6rem 0 6rem;
+    max-width: 70rem;
   }
 
   &__container {
     margin: auto;
-    max-width: 40em;
+    max-width: 40rem;
   }
 
-  &__h1 {
-    margin: 1em;
-    margin-top: 1.5em;
-  }
-
-  &__desc {
-    margin: 0 2em;
-  }
-
-  &__btn {
-    width: 15em;
-    margin: 2em;
-    border: none;
-    background-color: white;
-    color: $Violet;
-    padding: 1em;
-    border-radius: 2em;
-    cursor: pointer;
-    max-width: 12.5em;
-    box-shadow: 8px 8px 10px 0px rgba(0, 0, 0, 0.2);
-  }
-
-  &__btn:hover {
-    color: white;
-    box-shadow: 0 0 0 2px white inset;
-    background-color: transparent;
+  &__description {
+    margin: 1rem 0;
   }
 }
 
@@ -45,7 +20,7 @@
     margin: auto;
     display: flex;
 
-    &__img {
+    &__image {
       width: 100%;
       height: auto;
       margin: 0;
@@ -56,17 +31,13 @@
       margin-left: 3em;
     }
 
-    &__h1 {
+    &__heading {
       margin: 1em 0;
       margin-top: 0;
     }
 
-    &__desc {
+    &__description {
       margin: 0;
-    }
-
-    &__btn {
-      margin: 2em 0;
     }
   }
 }
