--- a/scss/blocks/_btn.scss
+++ b/scss/blocks/_btn.scss
@@ -4,9 +4,9 @@
     text-decoration: none;
     margin-top: 1.5rem;
     border: none;
-    background-color: white;
+    background-color: $color-white;
     padding: 1.2rem 7rem;
-    border-radius: 2rem;
+    border-radius: 10rem;
     box-shadow: 0.2rem 0.2rem 0.5rem 0px rgba(0, 0, 0, 0.4);
     display: inline-block;
     transition: all 0.2s ease-out;
