--- a/scss/blocks/_layout.scss
+++ b/scss/blocks/_layout.scss
@@ -1,15 +1,17 @@
 body {
   display: flex;
   flex-direction: column;
+  width: 80%;
 
   background-image: url(../images/bg-mobile.svg);
   background-repeat: no-repeat;
   background-size: 100%;
-  background-color: $Violet;
+  background-color: $color-violet;
 }
 
 @include screen-l {
   body {
+    width: 89%;
     background-image: url(../images/bg-desktop.svg);
     background-size: auto 100%;
     min-height: 100vh;
