--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
 
 /* blocks */
 @import "blocks/header";
-@import "blocks/body";
+@import "blocks/layout";
 @import "blocks/hero";
 @import "blocks/social";
 @import "blocks/btn";
