--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -16,9 +16,10 @@
 
 @include screen-l {
   .hero {
-    width: 1280px;
-    margin: auto;
+    width: 100%;
+    max-width: 128rem;
     display: flex;
+    margin: 10rem auto 0;
 
     &__image {
       width: 100%;
@@ -27,17 +28,12 @@
     }
 
     &__container {
-      max-width: 50em;
-      margin-left: 3em;
-    }
-
-    &__heading {
-      margin: 1em 0;
-      margin-top: 0;
+      max-width: 50rem;
+      margin: 3.5rem 0 0 6rem;
     }
 
     &__description {
-      margin: 0;
+      margin: 1.5rem 0;
     }
   }
 }
