--- a/scss/blocks/_social.scss
+++ b/scss/blocks/_social.scss
@@ -11,30 +11,27 @@
     list-style: none;
     margin: 0 0.5rem;
     padding: 0.3rem 0.6rem;
-    border: 0.1rem white solid;
+    border: 0.1rem $color-white solid;
     border-radius: 100%;
     cursor: pointer;
   }
 }
 .fab {
-  color: white;
+  color: $color-white;
   width: 1em;
 }
 
 @include screen-l {
   .social {
+    text-align: center;
     &__list {
-      padding: 0 4.5em;
       display: flex;
       justify-content: flex-end;
-      margin: 1.5em 0;
+      margin: 2.7rem 0 0;
     }
 
     &__list-item {
-      margin: 0.4em;
+      padding: 0.5rem 0.8rem;
     }
-  }
-  .fab {
-    width: 1.15em;
   }
 }
