--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,99 @@ body {
     font-size: 1.8rem;
   }
 }
+.square {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top: 10%;
+  left: 10%;
+  animation: animate 4s linear infinite;
+  background: linear-gradient(180deg, #b750b8 0%, #944cc9 100%);
+  border-radius: 4px;
+}
+
+.close {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top: 10%;
+  left: 10%;
+  animation: animate 4s linear infinite;
+  background: linear-gradient(180deg, #b750b8 0%, #944cc9 100%);
+  clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+  border-radius: 100;
+}
+
+.background div:nth-child(1) {
+  top: 20%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+
+.background div:nth-child(2) {
+  top: 26%;
+  left: 70%;
+  animation: animate 10s linear infinite;
+}
+
+.background div:nth-child(3) {
+  top: 80%;
+  left: 75%;
+  animation: animate 5s linear infinite;
+}
+
+.background div:nth-child(4) {
+  top: 65%;
+  left: 65%;
+  animation: animate 7s linear infinite;
+}
+
+.background div:nth-child(5) {
+  top: 90%;
+  left: 10%;
+  animation: animate 9s linear infinite;
+}
+
+.background div:nth-child(6) {
+  top: 30%;
+  left: 60%;
+  animation: animate 5s linear infinite;
+}
+
+.background div:nth-child(7) {
+  top: 80%;
+  left: 33%;
+  animation: animate 8s linear infinite;
+}
+
+.background div:nth-child(8) {
+  top: 35%;
+  left: 7%;
+  animation: animate 10s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(50deg);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.6) translateY(-250px) rotate(360deg);
+    opacity: 0;
+  }
+}
+@media (min-width: 1300px) {
+  .background div:nth-child(2) {
+    left: 89%;
+  }
+
+  .background div:nth-child(3) {
+    left: 90%;
+  }
+}
 /* blocks */
 .header {
+  z-index: 1;
   margin-right: auto;
   margin-top: 3.8rem;
 }
@@ -93,6 +184,9 @@ body {
     min-height: 100vh;
   }
 }
+.hero {
+  z-index: 1;
+}
 .hero__image {
   margin: 6rem 0 6rem;
   max-width: 70rem;
@@ -124,6 +218,9 @@ body {
   .hero__description {
     margin: 1.5rem 0;
   }
+}
+.social {
+  z-index: 1;
 }
 .social__list {
   display: flex;
